--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
         font-size: 18px;
         line-height: 1.17;
         letter-spacing: 0.03em;
+        text-decoration: none;
         text-transform: uppercase;
 }
 
@@ -72,7 +73,7 @@ body {
  }
 
 .link {
-    
+
     text-decoration: none;
 }
  /*Navigation*/
