--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ body {
 
 .contacts-item {
 
-        
+        font-style: normal;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
