--- a/css/style.css
+++ b/css/style.css
@@ -145,18 +145,20 @@ body {
         font-size: 56px;
         line-height: 1.07;
         letter-spacing: 0.02em;
+        text-align: center;
         color: #FFFFFF;
 }
 
 .hero-btn {
 
-    
+        font-family: Roboto, sans-serif;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
         color: #FFFFFF;
         background: #4D5AE5;
+        cursor: pointer;
 }
 
 .hero-btn:hover,
