--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,10 @@ body {
 
         font-weight: 700;
         font-size: 36px;
-        line-height: 1.1;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
+        text-align: center;
         color: #2E2F42;
 }
 
