--- a/css/style.css
+++ b/css/style.css
@@ -280,13 +280,15 @@ body {
                                     /*PORTFOLIO*/
 
 .portfolio-btn {
-
+        
+        font-family: Roboto, sans-serif;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
         color: #4D5AE5;
         background: #F4F4FD;
+        cursor: pointer;
 }
 
 .portfolio-btn:hover {
